@@ -626,6 +626,7 @@ svnant.jar.dir=${basedir}/../externals/svnant-jars
                 <patternset>
                     <includesfile name="${jython.base.dir}/build.Lib.include.properties" />
                     <exclude name="test/output/test_sax"/>
+                    <exclude name="test/output/test_zlib"/>
                 </patternset>
             </fileset>
         </copy>
