@@ -31,6 +31,7 @@ Jython 2.2 beta2
     - [ 663592 ] Problems calling an overriden class in the constructor
     - [ 448398 ] open('test.txt', 'w').write('test') fails
     - [ 1671373 ] A "$_PyInner.class" file in a package causes import to fail
+    - [ 1671431 ] dir function does not work with database connection object
   Patches applied
     - [ 1681774 ] str.decode, unicode.encode and str(u'') fixes
     - [ 1682423 ] Convert PyModule to a new-style class
